--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,52 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App {
+  display: flex;
+  flex-direction: row;
+}
+
+.posts {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow-y: scroll;
+  flex: 33 15;
+}
+
+.post-details {
+  flex: 67 15;
+}
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  /*transition: 0.3s;*/
+  border-radius: 5px; /* 5px rounded corners */
+  margin: 10px 10px;
+}
+
+.card img {
+  border-radius: 5px 5px 0 0;
+  width: 100%;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+  text-align: left;
+}
+
+.card.pinned {
+  background: grey;
+}
+
+.card h4:hover {
+  cursor: pointer;
+}
