- Added support for global state management through redux.

--- a/src/index.css
+++ b/src/index.css
@@ -309,3 +309,14 @@ label {
     margin-right: 10px;
     order: 1;
 }
+
+article {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    margin-bottom: 10px;
+    font-size: x-small;
+}
+
+.error {
+    color: firebrick;
+}
